--- a/check_backbone_models_by_webcam.ipynb
+++ b/check_backbone_models_by_webcam.ipynb
@@ -16,7 +16,10 @@
     "# torch\n",
     "import torch\n",
     "from PIL import Image\n",
-    "from torchvision import transforms"
+    "from torchvision import transforms\n",
+    "\n",
+    "# tf\n",
+    "# import tensorflow as tf"
    ]
   },
   {
@@ -168,14 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "8fffbfbd-5f4e-4fa0-8c67-4a8e71c47f29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tf\n",
-    "# import tensorflow as tf\n",
-    "\n",
     "mp_face_mesh = mp.solutions.face_mesh\n",
     "\n",
     "name = '0_66_49_wo_gl'\n",
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "1628e231-20c0-4f33-86ab-bc9f147542c7",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
     "    clip.write_gif(output_path, fps=fps)\n",
     "\n",
     "# Пример использования\n",
-    "input_video_path = \"result (2).mp4\"\n",
+    "input_video_path = \"result.mp4\"\n",
     "output_gif_path = \"result.gif\"\n",
     "\n",
     "convert_mp4_to_gif(input_video_path, output_gif_path)"
