--- a/check_tf_torch_models_on_Affectnet.ipynb
+++ b/check_tf_torch_models_on_Affectnet.ipynb
@@ -148,10 +148,10 @@
     "name = '0_66_49_wo_gl'\n",
     "\n",
     "# tf\n",
-    "tf_model = tf.keras.models.load_model('test_EmoAffectnet/models_EmoAffectnet/weights_{0}.h5'.format(name))\n",
+    "tf_model = tf.keras.models.load_model('models_EmoAffectnet/weights_{0}.h5'.format(name))\n",
     "\n",
     "# torch\n",
-    "pth_model = torch.jit.load('test_EmoAffectnet/models_EmoAffectnet/model_scripted_{0}.pt'.format(name))"
+    "pth_model = torch.jit.load('models_EmoAffectnet/torchscript_model_{0}.pth'.format(name))"
    ]
   },
   {
@@ -172,7 +172,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 3500/3500 [02:10<00:00, 26.84it/s]"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 3500/3500 [02:09<00:00, 27.06it/s]"
      ]
     },
     {
@@ -314,10 +314,10 @@
     "name = '0_66_37_wo_gl'\n",
     "\n",
     "# tf\n",
-    "tf_model = tf.keras.models.load_model('test_EmoAffectnet/models_EmoAffectnet/weights_{0}.h5'.format(name))\n",
+    "tf_model = tf.keras.models.load_model('models_EmoAffectnet/weights_{0}.h5'.format(name))\n",
     "\n",
     "# torch\n",
-    "pth_model = torch.jit.load('test_EmoAffectnet/models_EmoAffectnet/model_scripted_{0}.pt'.format(name))"
+    "pth_model = torch.jit.load('models_EmoAffectnet/torchscript_model_{0}.pth'.format(name))"
    ]
   },
   {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "3e9746df-a58d-4d8d-87b5-02630bbdcb46",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 3500/3500 [02:09<00:00, 27.13it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 3500/3500 [02:06<00:00, 27.59it/s]\n"
      ]
     },
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "86c85c1c-60f6-45b8-ae55-ba2dc48562c8",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 3500/3500 [02:54<00:00, 20.05it/s]"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 3500/3500 [02:54<00:00, 20.02it/s]"
      ]
     },
     {
