--- a/check_backbone_models_by_webcam.ipynb
+++ b/check_backbone_models_by_webcam.ipynb
@@ -181,8 +181,10 @@
     "name = '0_66_49_wo_gl'\n",
     "\n",
     "# torch\n",
-    "pth_model = torch.jit.load('models_EmoAffectnet/model_scripted_{0}.pt'.format(name)).to('cuda')\n",
+    "pth_model = torch.jit.load('models_EmoAffectnet/torchscript_model_{0}.pth'.format(name)).to('cuda')\n",
     "pth_model.eval()\n",
+    "\n",
+    "\n",
     "\n",
     "# tf\n",
     "# tf_model = tf.keras.models.load_model('models_EmoAffectnet/weights_{0}.h5'.format(name))\n",
